end of section 10

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,5 @@
+<ngx-spinner bdColor = "rgba(0,0,0,0)" size = "medium" color = "#333333" type = "ball-running-dots" [fullScreen] = "true">
+</ngx-spinner>
 <app-nav></app-nav>
 
 <div class="container" style="margin-top: 100px;">
