--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -18,10 +18,10 @@
             <th style="width: 20%;">Sent / Received</th>
             <th style="width: 20%;">Message</th>
         </tr>
-        <tr *ngFor="let message of messages" 
+        <tr [hidden]="loading" *ngFor="let message of messages" 
             routerLink='{{container === "Outbox" 
                             ? "/members/" + message.recipientUsername 
-                            : "/members/" + message.senderUsername}}'>
+                            : "/members/" + message.senderUsername}}' [queryParams]='{tab: 3}'>
             <td>{{message.content}}</td>
             <td>
                 <div *ngIf="container === 'Outbox'">
@@ -41,13 +41,13 @@
             </td>
             <td>{{message.messageSent | timeago}}</td>
             <td>
-                <button class="btn btn-danger">Delete</button>
+                <button (click)="$event.stopPropagation()" class="btn btn-danger" (click)="deleteMessage(message.id)">Delete</button>
             </td>
         </tr>
     </table>
 </div>
 
-<div class="d-flex justify-content-center" *ngIf="pagination">
+<div class="d-flex justify-content-center" *ngIf="pagination && !loading">
     <pagination [boundaryLinks]="true" 
                 [totalItems]="pagination.totalItems"
                 [itemsPerPage]="pagination.itemsPerPage"
