--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,5 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
-.tab-panel {
+ You can add global styles to this file, and also import other style files
+
+ .tab-panel {
   border: 1px solid #ddd;
   padding: 10px;
   border-radius: 4px;
@@ -12,7 +13,7 @@
 
 .member-tabset > .nav-tabs > li.open > a,
 .member-tabset > .nav-tabs > li:hover > a {
-  border: 0;
+  border-color: rgba(170, 170, 170, 0);
   background: none !important;
   color: #fff;
 }
@@ -26,15 +27,14 @@
 .member-tabset > .nav-tabs > li:hover .dropdown-menu {
   margin-top: 0px;
 }
-
 .member-tabset > .nav-tabs > li.active {
   border-bottom: 4px solid #0aa;
   position: relative;
 }
 
 .member-tabset > .tab-content {
-  margin-top: -3px;
-  border: 0;
-  border-top: 1px solid #eee;
+   margin-top: -3px; 
+   border: 0; 
+   border-top: 1px solid #eee; 
   padding: 15px 0;
-}
+} 
